# conformance-tests

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: static.yml
fixtures/: index.html
fixtures/0.10.0/: all.json  build.json  cid.json  refute.json  verify.json
src/: crypto.rs  generators.rs  identities.rs  lib.rs  main.rs
src/capabilities/: email.rs  mod.rs  wnfs.rs
src/generators/: assertions.rs  build.rs  mod.rs  mutate.rs  refute.rs  to_cid.rs  verify.rs
tests/: integration_test.rs
