[package]
name = "ucan-fixture-generator"
version = "0.1.0"
description = "A UCAN fixture generator"
keywords = []
categories = []

include = ["/src", "README.md", "LICENSE"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/ucan-fixture-generator"
repository = "https://github.com/ucan-wg/ucan-fixture-generator"
authors = ["Brian <brian@fission.codes>"]

[lib]
path = "src/lib.rs"
doctest = true

[[bin]]
name = "ucan-fixture-generator"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
did-key = "0.2"
ed25519-zebra = "^3"
rand = "~0.8"
serde = "1.0.179"
serde_json = { version = "1.0.104", features = ["preserve_order"] }
serde_with = { version = "3.1.0", features = ["base64"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "test-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ucan = { path = "../rs-ucan/ucan" }
ucan-key-support = { path = "../rs-ucan/ucan-key-support" }
url = "2.0"

[features]
default = []

[metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
# [profile.release]
# Do not perform backtrace for panic on release builds.
## panic = 'abort'
# Perform optimizations on all codegen units.
## codegen-units = 1
# Tell `rustc` to optimize for small code size.
## opt-level = "s" # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
## lto = true
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false
# Strip debug symbols
## strip = "symbols"

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
